--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: daisukez # The title of the blog
 author: dai # Your name 
 email: tokyo@yahoo.com # your email shown in the footer
-url: https://github.com/daisukez/root # this is your site's root address.
+url: https://daisukez.github.io/root/ # this is your site's root address.
 description: > # A clean and minimalist theme for Jekyll.
 favicon: "./favicon.ico" # set the favicon of the site 
 
